add component and service

--- a/basic/angular.json
+++ b/basic/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "basic"
+    }
+  },
+  "defaultProject": "basic",
+  "cli": {
+    "analytics": false
+  }
 }
